FrostWire 2.8.0 build 737 OCT/10/2024
 - New: Dark Mode Theme
 - yt_dlp-2024.9.27
 - androidx.core:core:1.13.1
 - com.android.tools.build:gradle:8.7.0
 - androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.6

FrostWire 2.7.9 build 736 AUG/24/2024
 - Enhanced SSL/TLS validation with improved domain and certificate handling in Ssl.java
 - Added "frostwire.com" to the list of valid SSL certificate domains
 - Implemented dynamic validation for subdomains
 - Updated NullTrustManager to manage and log SSL certificates more effectively
 - Simplified item access methods in TellurideSearchResultDownloadDialog
 - Removed unnecessary casting to improve code readability and efficiency
 - Corrected iswindows function in common.sh for proper integer comparison
 - Updated function’s usage in configure_update.sh for correct return status handling
 - Adjusted YTSearchPerformer for more memory-efficient handling of search results
 - Improved placement of FrostClick search within the Android UI
 - Fixed potential NullPointerException in TellurideSearchResultDownloadDialog
 - Fix potential NullPointerException in SearchFragment by ensuring valid FragmentManager
 - Fix ClassCastException in TellurideCourierCallback by adding type check for adapter instance
 - Enhanced URL opening method to handle cases where no default browser is found
 - Updated Gradle wrapper to use version 8.9
 - yt_dlp 2024.08.06
 - com.google.firebase:firebase-bom:33.2.0
 - com.google.gms:google-services:4.4.2
 - com.google.firebase:firebase-crashlytics-gradle:3.0.2
 - org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.0.20
 - androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.4

FrostWire 2.7.8 build 733 MAY/25/2024
 - Fixes X Video Download issue where video file names were too long
 - Search fixes
 - EZTV search removed
 - Yify search removed
 - Updated Gradle to version 8.6
 - Updated Android Gradle plugin to 8.2.1 and 8.3.2
 - Updated Python integration with com.chaquo.python:gradle:15.0.1