@@ -1,9 +1,13 @@
-FrostWire 2.8.0 build 737 OCT/10/2024
+FrostWire 2.8.0 build 737 OCT/11/2024
  - New: Dark Mode Theme
+ - Removed Google Playstore Billing integration and libraries
  - yt_dlp-2024.9.27
  - androidx.core:core:1.13.1
  - com.android.tools.build:gradle:8.7.0
+ - androidx.appcompat:appcompat:1.7.0
  - androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.6
+ - com.google.firebase:firebase-bom:33.4.0
+
 
 FrostWire 2.7.9 build 736 AUG/24/2024
  - Enhanced SSL/TLS validation with improved domain and certificate handling in Ssl.java
